--- a/app/src/main/res/layout/custom_view_card_chefs.xml
+++ b/app/src/main/res/layout/custom_view_card_chefs.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="ImageContrastCheck"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/foto_chef2" />
 
             <TextView
                 android:id="@+id/nombre_chef"
@@ -64,6 +64,22 @@
                 app:layout_constraintStart_toEndOf="@+id/foto_chef"
                 app:layout_constraintTop_toBottomOf="@+id/nombre_chef"
                 app:layout_constraintVertical_bias="0.0" />
+            <TextView
+                android:id="@+id/tipo_servicio"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/tipo_de_servicio"
+                android:textColor="@color/gris"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/foto_chef"
+                app:layout_constraintTop_toBottomOf="@+id/tipo_comida"
+                app:layout_constraintVertical_bias="0.0" />
+
 
             <TextView
                 android:id="@+id/provincia"
@@ -79,7 +95,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/foto_chef"
-                app:layout_constraintTop_toBottomOf="@+id/tipo_comida"
+                app:layout_constraintTop_toBottomOf="@+id/tipo_servicio"
                 app:layout_constraintVertical_bias="0.0" />
 
             <RatingBar
@@ -90,6 +106,7 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="31dp"
                 android:clickable="false"
+
                 android:progressTint="#FFE500"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
