--- a/app/src/main/res/layout/activity_reservar.xml
+++ b/app/src/main/res/layout/activity_reservar.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/fondo1">
 
     <CalendarView
-        android:id="@+id/calendarView"
+        android:id="@+id/calendarView_reserva"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView_reserva"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/boton_confirmar" />
 
