--- a/app/src/main/res/layout/activity_chef_ampliado.xml
+++ b/app/src/main/res/layout/activity_chef_ampliado.xml
@@ -11,14 +11,15 @@
         android:layout_width="183dp"
         android:layout_height="43dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="206dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/telefono_chef"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ibtn_contacto" />
 
@@ -34,9 +35,9 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.118"
-        tools:ignore="ImageContrastCheck"
-        app:srcCompat="@drawable/foto_chef2" />
+        app:layout_constraintVertical_bias="0.056"
+        app:srcCompat="@drawable/foto_chef2"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/nombre_chef_ampliado"
@@ -50,9 +51,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="0.055" />
 
     <TextView
         android:id="@+id/tipo_comida_ampliado"
@@ -125,7 +127,7 @@
         android:id="@+id/ibtn_reservar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="350dp"
         android:background="@drawable/boton_reservar"
         android:contentDescription="@string/boton_reservar"
         android:onClick="reservar"
@@ -142,8 +144,8 @@
         android:id="@+id/ibtn_contacto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="46dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/boton_contactar"
         android:contentDescription="@string/boton_contacto"
         android:onClick="contactar"
@@ -170,6 +172,17 @@
         app:srcCompat="@android:drawable/ic_lock_power_off"
         app:tint="@color/white"
         tools:ignore="ImageContrastCheck" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_reseñas_chef_amp"
+        android:layout_width="412dp"
+        android:layout_height="328dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/ibtn_reservar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foto_chef_ampliado" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
