--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -78,6 +78,7 @@
         android:ems="10"
         android:hint="@string/busca_un_usuario"
         android:inputType="text"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         app:layout_constraintBottom_toTopOf="@+id/rv_users"
         app:layout_constraintEnd_toEndOf="parent"
