--- a/app/src/main/res/layout/activity_chef_ampliado.xml
+++ b/app/src/main/res/layout/activity_chef_ampliado.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo1">
+    android:background="@drawable/fondo1"
+    tools:context=".Activity_chef_ampliado" >
 
     <TextView
         android:id="@+id/edt_telefono_chef"
