--- a/app/src/main/res/layout/activity_reservas_chef.xml
+++ b/app/src/main/res/layout/activity_reservas_chef.xml
@@ -30,6 +30,7 @@
         android:hint="@string/busca_fecha"
         android:inputType="number"
         android:textColorHint="@color/hint"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/rv_reservas_chef"
         app:layout_constraintEnd_toStartOf="@+id/btn_lupa3"
         app:layout_constraintStart_toStartOf="parent"
