--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -32,6 +32,7 @@
         android:hint="@string/busca_fecha"
         android:inputType="number"
         android:textColorHint="@color/hint"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/rv_reservas"
         app:layout_constraintEnd_toStartOf="@+id/btn_lupa3"
         app:layout_constraintStart_toStartOf="parent"
