--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -38,6 +38,24 @@
         app:tint="@color/white" />
 
     <ImageButton
+        android:id="@+id/btn_atras"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:background="@drawable/fondo_boton_redondo"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="atras"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.358"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976"
+        app:srcCompat="@android:drawable/ic_menu_revert"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageButton
         android:id="@+id/imb_gestion_usuarios"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
