--- a/app/src/main/res/layout/activity_reserva_ampliado_admin.xml
+++ b/app/src/main/res/layout/activity_reserva_ampliado_admin.xml
@@ -90,19 +90,39 @@
         android:id="@+id/btn_logout_user"
         android:layout_width="68dp"
         android:layout_height="56dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="187dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/fondo_boton_redondo_logout"
         android:contentDescription="@string/boton_modperfil"
         android:onClick="logout"
         android:tintMode="src_in"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ibtn_edit"
+        app:layout_constraintEnd_toStartOf="@+id/btn_atras"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/comentario"
         app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageButton
+        android:id="@+id/btn_atras"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/fondo_boton_redondo"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="atras"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ibtn_edit"
+        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
+        app:layout_constraintTop_toBottomOf="@+id/comentario"
+        app:srcCompat="@android:drawable/ic_menu_revert"
         app:tint="@color/white"
         tools:ignore="ImageContrastCheck" />
 
@@ -111,15 +131,15 @@
         android:layout_width="67dp"
         android:layout_height="57dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="185dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_editar"
         android:onClick="editarReserva"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibtn_delete"
-        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
+        app:layout_constraintStart_toEndOf="@+id/btn_atras"
         app:layout_constraintTop_toBottomOf="@+id/comentario"
         app:srcCompat="@android:drawable/ic_menu_edit"
         tools:ignore="ImageContrastCheck" />
@@ -128,9 +148,9 @@
         android:id="@+id/ibtn_delete"
         android:layout_width="67dp"
         android:layout_height="57dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="185dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_borrar"
