--- a/app/src/main/res/layout/activity_contenido_chef_ampliado.xml
+++ b/app/src/main/res/layout/activity_contenido_chef_ampliado.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo1"
-    tools:context=".Activity_chef_ampliado" >
+    tools:context=".Activity_contenido_chef_ampliado" >
 
     <TextView
         android:id="@+id/edt_telefono_chef"
