--- a/app/src/main/res/layout/activity_client_lista_reservas.xml
+++ b/app/src/main/res/layout/activity_client_lista_reservas.xml
@@ -59,7 +59,6 @@
 
     <ImageButton
         android:id="@+id/btn_logout_user"
-        tools:ignore="ImageContrastCheck"
         android:layout_width="68dp"
         android:layout_height="56dp"
         android:layout_marginBottom="16dp"
@@ -72,7 +71,8 @@
         app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_lock_power_off"
-        app:tint="@color/white" />
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/btn_atras"
