--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -21,7 +21,6 @@
 
     <ImageButton
         android:id="@+id/btn_logout_admin"
-        tools:ignore="ImageContrastCheck"
         android:layout_width="68dp"
         android:layout_height="56dp"
         android:background="@drawable/fondo_boton_redondo_logout"
@@ -35,7 +34,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976"
         app:srcCompat="@android:drawable/ic_lock_power_off"
-        app:tint="@color/white" />
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/btn_atras"
@@ -63,7 +63,7 @@
         android:layout_marginBottom="20dp"
         android:background="#00FFFFFF"
         android:onClick="gestion_usuarios"
-        app:layout_constraintBottom_toTopOf="@+id/imb_gestion_reseñas"
+        app:layout_constraintBottom_toTopOf="@+id/imb_gestion_resenyas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_titulo_menu_admin"
@@ -71,13 +71,13 @@
         tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
     <ImageButton
-        android:id="@+id/imb_gestion_reseñas"
+        android:id="@+id/imb_gestion_resenyas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="395dp"
         android:background="#00FFFFFF"
-        android:onClick="gestion_reseñas"
+        android:onClick="gestion_resenyas"
         app:layout_constraintBottom_toTopOf="@+id/btn_logout_admin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,9 +104,9 @@
         android:text="@string/gestion_de_reseñas"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imb_gestion_reseñas"
+        app:layout_constraintBottom_toBottomOf="@+id/imb_gestion_resenyas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imb_gestion_reseñas" />
+        app:layout_constraintTop_toTopOf="@+id/imb_gestion_resenyas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
