--- a/app/src/main/res/layout/activity_admin_reserva_ampliado.xml
+++ b/app/src/main/res/layout/activity_admin_reserva_ampliado.xml
@@ -104,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/comentario"
         app:srcCompat="@android:drawable/ic_lock_power_off"
         app:tint="@color/white"
-        tools:ignore="ImageContrastCheck" />
+        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/btn_atras"
