--- a/app/src/main/res/layout/activity_chef_menu.xml
+++ b/app/src/main/res/layout/activity_chef_menu.xml
@@ -21,7 +21,6 @@
 
     <ImageButton
         android:id="@+id/btn_logout_admin"
-        tools:ignore="ImageContrastCheck"
         android:layout_width="68dp"
         android:layout_height="56dp"
         android:background="@drawable/fondo_boton_redondo_logout"
@@ -35,7 +34,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976"
         app:srcCompat="@android:drawable/ic_lock_power_off"
-        app:tint="@color/white" />
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/btn_atras"
