--- a/app/src/main/res/layout/activity_client_reserva_ampliado.xml
+++ b/app/src/main/res/layout/activity_client_reserva_ampliado.xml
@@ -114,6 +114,6 @@
         app:layout_constraintVertical_bias="0.888"
         app:srcCompat="@android:drawable/ic_menu_revert"
         app:tint="@color/white"
-        tools:ignore="ImageContrastCheck" />
+        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
