--- a/app/src/main/res/layout/custom_view_card_reservas_chef.xml
+++ b/app/src/main/res/layout/custom_view_card_reservas_chef.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/comentario_reseña"
+                android:id="@+id/comentario_resenya"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -74,7 +74,7 @@
                 android:progressTint="#FFEB3B"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/comentario_reseña" />
+                app:layout_constraintTop_toBottomOf="@+id/comentario_resenya" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
